loops and string interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <input type="text" [(ngModel)]="title"/>
 
+<ul>
+  <li *ngFor="let i of numbers">
+    {{i}}
+  </li>
+</ul>Ecommerce
+
 <p>
 {{ title }}
 </p>
