--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <input type="text" [(ngModel)]="title"/>
 
+
 <button (click)="addItem(title)" > Add item </button>
 
 <ul>
@@ -11,16 +12,7 @@
 
 <h1>{{ title }}</h1>
 
-<div [ngSwitch]="title">
-  <p *ngSwitchCase="'Julian'">Julian</p>
-  <p *ngSwitchCase="'Victor'">Victor</p>
-  <p *ngSwitchCase="'Andrea'">Andrea</p>
-  <p *ngSwitchDefault>No hay</p>
-</div>
-
 <div *ngFor="let product of products">
-  {{ product.title }}
-  <img [src]="product.image" [alt]="'img of ' + product.title">
-
+  <app-product (productClicked)="clickProduct($event)" [product]="product"></app-product>
 </div>
 
