add sytyle to out cmps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-<input type="text" [(ngModel)]="title"/>
+<input type="text" [(ngModel)]="title" />
 
 
-<button (click)="addItem(title)" > Add item </button>
+<button (click)="addItem(title)"> Add item </button>
 
 <ul>
   <li *ngIf="items.length === 0"> Empty </li>
   <li *ngFor="let name of items; index as i">
-    {{name}} - {{i}} <button (click)="deleteItem(i)" > Delete item </button>
+    {{name}} - {{i}} <button (click)="deleteItem(i)"> Delete item </button>
   </li>
 </ul>
 
 <h1>{{ title }}</h1>
 
-<div *ngFor="let product of products">
-  <app-product (productClicked)="clickProduct($event)" [product]="product"></app-product>
+<div class="product-grid">
+  <app-product *ngFor="let product of products" (productClicked)="clickProduct($event)" [product]="product">
+  </app-product>
 </div>
-
