--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <input type="text" [(ngModel)]="title" />
 
-
 <button (click)="addItem(title)"> Add item </button>
+
+<input type="text" [(ngModel)]="power" />
+{{ power | exponential}}
 
 <ul>
   <li *ngIf="items.length === 0"> Empty </li>
