--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
-<h3>{{ product.title }}</h3>
+<h3 appHighlight>{{ product.title }}</h3>
 <div>
     <img [src]="product.image" [alt]="'img of ' + product.title">
 </div>
