routing and cleaning project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-<input type="text" [(ngModel)]="title" />
-
-<button (click)="addItem(title)"> Add item </button>
-
-<input type="text" [(ngModel)]="power" />
-{{ power | exponential}}
-
-<ul>
-  <li *ngIf="items.length === 0"> Empty </li>
-  <li *ngFor="let name of items; index as i">
-    {{name}} - {{i}} <button (click)="deleteItem(i)"> Delete item </button>
-  </li>
-</ul>
-
-<h1>{{ title }}</h1>
-
-<div class="product-grid">
-  <app-product *ngFor="let product of products" (productClicked)="clickProduct($event)" [product]="product">
-  </app-product>
-</div>
+<router-outlet></router-outlet>
