--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,9 @@
+<app-header></app-header>
+
 <div class="product-grid">
     <app-product *ngFor="let product of products" (productClicked)="clickProduct($event)" [product]="product">
     </app-product>
 </div>
+
+
+<app-footer></app-footer>
