Making detail product better

--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,1 +1,11 @@
-<p>product-detail works!</p>
+<div>
+    <img [src]="product.image" alt="product.title">
+</div>
+<div>
+    <ul>
+        <li>Name: {{ product.title }}</li>
+        <li>Price: {{ product.price | currency }}</li>
+        <li>Description: {{ product.description }}</li>
+    </ul>
+
+</div>
