--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-    margin: 0px;
-    padding: 0px;
-}
 
 .product-grid {
     display: grid;
@@ -14,3 +10,5 @@ body {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
