styling product card

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<div class="footer-height">
+  <div class="row around-xs">
+    <div class="col-xs-2">
+      <div class="box box-padding">
+        ECOMMERCE FOOTER
+      </div>
+    </div>
+    <div class="col-xs-2">
+      <div class="box box-padding">
+        LINKS
+      </div>
+    </div>
+    <div class="col-xs-2">
+      <div class="box box-padding">
+        CONTACTO
+      </div>
+    </div>
+  </div>
+</div>
