--- a/src/app/components/product/components/product/product.component.html
+++ b/src/app/components/product/components/product/product.component.html
@@ -1,9 +1,27 @@
-<h3 appHighlight>{{ product.title }}</h3>
-<div>
-    <img [src]="product.image" [alt]="'img of ' + product.title">
-</div>
-<p>{{ product.price | currency }}</p>
-<p>{{ product.description | slice: 0:3 }}</p>
-<a [routerLink]="['/products', product.id]">See more</a>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>{{ product.title | uppercase }}</mat-card-title>
+        <mat-card-subtitle>{{ product.price | currency }}</mat-card-subtitle>
+    </mat-card-header>
+    <div class="img-crop">
+        <img [src]="product.image" [alt]="'img of ' + product.title">
 
-<button (click)="addCart()" mat-raised-button color="primary">Add to Cart</button>
+    </div>
+    <mat-card-content>
+        <p>
+            {{product.description}}
+        </p>
+    </mat-card-content>
+
+    <mat-card-actions>
+        <a mat-raised-button [routerLink]="['/products', product.id]">See more</a>
+        <button (click)="addCart()" mat-raised-button color="primary">Add to Cart</button>
+    </mat-card-actions>
+
+</mat-card>
+
+
+<!-- <h3 appHighlight></h3>
+<div>
+   
+</div> -->
