--- a/src/app/components/product/components/product/product.component.scss
+++ b/src/app/components/product/components/product/product.component.scss
@@ -1,9 +1,19 @@
-:host {
+/* :host {
     margin: 2px;
     border-radius: 5px;
     border: 1px solid black;
     display: block;
-}
-img {
-    max-width: 100%;
-}
+} */
+.img-crop{
+    height: 300px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 100%;
+    }
+  }
