--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -1,10 +1,12 @@
-<div>
-    <img [src]="product.image" alt="product.title">
-</div>
-<div>
-    <ul>
-        <li>Name: {{ product.title }}</li>
-        <li>Price: {{ product.price | currency }}</li>
-        <li>Description: {{ product.description }}</li>
-    </ul>
+<div *ngIf="product">
+    <div>
+        <img [src]="product.image" alt="product.title">
+    </div>
+    <div>
+        <ul>
+            <li>Name: {{ product.title }}</li>
+            <li>Price: {{ product.price | currency }}</li>
+            <li>Description: {{ product.description }}</li>
+        </ul>
+    </div>
 </div>
