--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -9,4 +9,6 @@
             <li>Description: {{ product.description }}</li>
         </ul>
     </div>
+
+    <button (click)="createProduct()">Create product</button>
 </div>
