--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -8,7 +8,12 @@
             <li>Price: {{ product.price | currency }}</li>
             <li>Description: {{ product.description }}</li>
         </ul>
+
+        
+    <button (click)="createProduct()">Create product</button>
+    <button (click)="updateProduct()">Update product</button>
+    <button (click)="deleteProduct()">Delete product</button>
+
     </div>
 
-    <button (click)="createProduct()">Create product</button>
 </div>
