--- a/src/app/components/admin/components/product-list/product-list.component.html
+++ b/src/app/components/admin/components/product-list/product-list.component.html
@@ -19,7 +19,7 @@
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let product">
       <button mat-button>Edit</button>
-      <button mat-icon-button color="warn" aria-label="Example icon button with a plus one icon">
+      <button mat-icon-button color="warn" (click)="deleteProduct(product.id)">
         <mat-icon>delete_forever</mat-icon>
       </button>
     </td>
