Adding products to the cart

--- a/src/app/components/product/components/product-detail/product-detail.component.html
+++ b/src/app/components/product/components/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="product">
     <div>
-        <img [src]="product.image" alt="product.title">
+        <img [src]="product.image" alt="product.title" width="250px" >
     </div>
     <div>
         <ul>
@@ -10,9 +10,9 @@
         </ul>
 
         
-    <button (click)="createProduct()">Create product</button>
+    <!-- <button (click)="createProduct()">Create product</button>
     <button (click)="updateProduct()">Update product</button>
-    <button (click)="deleteProduct()">Delete product</button>
+    <button (click)="deleteProduct()">Delete product</button> -->
 
     </div>
 
