--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
                 <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
                 <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
             </nav>
-            <a mat-raised-button matBadge="+5" matBadgeColor="accent">
+            <a mat-raised-button [matBadge]="totalProducts" matBadgeColor="accent">
                 <mat-icon>shopping_cart</mat-icon>
                 Cart
             </a>
